# aoc-2024

./: Cargo.toml  Justfile  template.rs
.cargo/: config.toml
examples/: day1.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
src/: co2.rs  co3.rs  input.rs  lib.rs
