[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
array_tool = "1.0.3"
env_logger = "0.11.5"
fs-err = "2.9.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
lcmx = "0.1.3"
log = "0.4.22"
petgraph = "0.6.4"
prime_factorization = "1.0.4"
rayon = "1.6.1"
regex = "1.7.0"

[profile.'superfast']
inherits = 'release'
lto = "fat"
codegen-units = 1
panic = "abort"
split-debuginfo = 'off' # Platform-specific
strip = true
